# emo_vision

./: .gitignore  README.md  pyproject.toml  requirements-demo.txt  requirements.txt
configs/: final_capstone.json
configs/experiments/: audio_wav2vec2_cremad_tess_ravdess_7class.json  audio_wav2vec2_cremad_tess_savee_ravdess_7class.disabled.json  fusion_meld_calibration_eval_only.json  text_roberta_goemotions_dailydialog_7class.json
docs/final_report/: DATA_ACCESS_GUIDE.md  EXPERIMENT_PLAN_LICENSE_CONTROLLED.md  FINAL_EVIDENCE_CHECKLIST.md  LABEL_ALIGNMENT.md  LICENSE_AND_DATA_POLICY.md  LOCAL_ARTIFACT_LAYOUT.md  LOCAL_SETUP_WINDOWS.md  PROJECT_FINAL_SCOPE.md  REPO_CLEANUP_SUMMARY.md  THIRD_PARTY_NOTICES.md
reports/final_report_evidence/audio/: README.md
reports/final_report_evidence/fusion/: README.md
reports/final_report_evidence/repo/: final_label_mapping.json  git_commit.txt  repo_file_inventory.tsv
reports/final_report_evidence/text/: README.md
scripts/: diagnose_predictions.py  evaluate_inference.py  grid_search_fusion.py  run_demo.py
scripts/final_report/: build_final_evidence.py  check_label_alignment.py  check_local_artifacts.py  check_public_release_safety.py  compute_metrics_from_predictions.py  test_model_loading.py
src/multimodal_emotion/: config.py  labels.py
tests/: test_diagnose_predictions.py  test_evaluate_inference.py  test_fusion.py  test_grid_search_fusion.py  test_labels.py  test_predictor_contracts.py
tests/test_manifest/: validation_fusion_ready_small_10_per_class.jsonl  validation_fusion_ready_small_10_per_class_local.jsonl
(+13 files in other folders)
